# Penny-Dreadful-Tools

./: .codacy-pylintrc  .codecov.yml  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .flake8  .gitattributes  .gitignore  .isort.cfg  .mergify.yml  .pre-commit-config.yaml  .prospector.yml  .prout.json  .pylintrc  .travis.yml  .yourbase.yml  Dockerfile  Jenkinsfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  SETUP  TODO  akira_play.py  bad_code.py  bootstrap.sh  bors.toml  bot.py  botsite.wsgi  bug_hooks.wsgi  build.py  card.py  card_aliases.tsv  codecov2.sh  command.py  commands.py  config.json.example  (+46 more)
.github/: dependabot.yml  labeler.yml
analysis/: analysis.py  analysis_test.py
decksite/: __init__.py  achievements.py  admin.py  api.py  auth.py  cache.py  database.py  deck_name.py  deck_name_test.py  deck_type.py  form.py  league.py  league_test.py  localization.py  logger.py  main.py  manabase.py  prepare.py  resources.json  smoke_test.py  tappedout.py  template.py  template_test.py  testutil.py  tournament.py  translation.py  translation_test.py  unit_test.py  view.py  view_test.py  webpack.config.js
discordbot/: .prout.json  README.md  background.py  bot.py  command.py  command_test.py  emoji.py  emoji_test.py  functional_test.py  generate_readme.py  help.py  run.py  shared.py  unit_test.py
discordsite/: __init__.py
docs/: conf.py  index.rst
find/: expression.py  find_test.py  search.py  tests.py  tokens.py
github_tools/: .prout.json  __init__.py  webhooks.py
logsite/: __init__.py  analyze_games.py  api.py  auth.py  database.py  db.py  importing.py  localization.py  main.py  smoke_test.py  stats.py  view.py
logsite_migrations/: env.py
magic/: card.py  card_description.py  card_price.py  card_test.py  colors.py  colors_test.py  configuration.py  database.py  decklist.py  decklist_test.py  fetcher.py  fetcher_internal.py  image_fetcher.py  layout.py  legality.py  legality_test.py  mana.py  mana_test.py  multiverse.py  multiverse_test.py  oracle.py  oracle_test.py  rotation.py  rotation_info.py  rotation_test.py  scryfall.py  seasons.py  seasons_test.py  tournaments.py  tournaments_test.py  whoosh_constants.py  whoosh_search.py  whoosh_search_test.py  whoosh_write.py
maintenance/: analyze_games.py  calculate_similar_decks.py  clear_rotation_cache.py  clear_rotation_cache_hard.py  clear_rotation_cache_internal.py  client_dependencies.py  deck_hash.py  deck_name.py  delete_unplayed_retired_decks.py  dev_db.py  elo.py  fonts.py  gatherling_substitutions.py  generate_translations.py  guess_league_archetypes.py  homepage_cache.py  insert_seasons.py  populate_whoosh_index.py  populate_woosh_index.py  post_rotation.py  process_logs.py  renew_cache.py  reprime_cache.py  spikey.py  squash_people.py  typeahead.py  update_translations.py  validate_translations.py  validate_translations_test.py
modo_bugs/: .prout.json  fetcher.py  main.py  repo.py  scrape_announcements.py  scrape_bugblog.py  scrape_forum.py  strings.py  untracked.py  untracked_bugs.py  update.py  verification.py  webhooks.py
price_grabber/: parser.py  price.py  price_grabber.py  srv_prices.py
pylint_monolith/: __init__.py  await_checker.py  l18n_check.py  monolith_checker.py
rotation_script/: rotation_script.py  rotation_script_test.py
(+605 files in other folders)
