[project]
name = "Penny-Dreadful-Tools"
version = "2026.1.0"
requires-python = "~=3.13"
dependencies = [
    "anytree==2.13.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "better-profanity",
    "cachelib==0.13.0",
    "click==8.3.1",
    "coverage==7.13.1",
    "feedparser==6.0.12",
    "flask-restx",
    "ftfy==6.3.1",
    "pip-check-reqs==2.5.5",
    "google-api-python-client==2.188.0",
    "inflect==7.5.0",
    "isort==7.0.0",
    "jsbeautifier==1.15.4",
    "lxml",
    "matplotlib==3.10.8",
    "munch==4.0.0",
    "mysqlclient==2.2.7",
    "plumbum==1.10.0",
    "poeditor==1.1.3",
    "pygtrie==2.5.0",
    "pyhumps==3.8.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "redis==7.1.0",
    "requests",
    "requests-oauthlib==2.0.0",
    "requirements-parser==0.13.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "titlecase==2.4.1",
    "typing-extensions",
    "untangle==1.2.1",
    "Babel==2.12.1",
    "Flask",
    "Flask-Babel",
    "Flask-Migrate",
    "Flask-Session==0.5.0",
    "Flask-SQLAlchemy",
    "Markdown==3.4.4",
    "Pillow",
    "PyGithub==1.59.1",
    "SQLAlchemy>=2.0.20",
    "SQLAlchemy-Utils>=0.41.1",
    "Whoosh==2.7.4",
    "sentry-sdk[flask]",
    "pydantic",
    "pystache",
    "fasteners",
    "interactions.py==5.13.1",
    "tomli",
    "orjson",
    "traceback-with-variables",
    "freezegun",
    "anyascii",
    "manabase-solver",
    "brotli",
    "scipy",
    "regex",
    "audioop-lts",
]

[project.scripts]
# discordbot = "run:discordbot"
# decksite = "run:decksite"
# logsite = "run:logsite"
# maintenance = "run:maintenance"
# scraper = "run:scraper"
# modo-bugs = "run:modo-bugs"
# price-grabber = "run:price-grabber"
# rotation = "run:rotation"
# srv-price = "run:srv-price"
# mypy = "dev:mypy"
# lint = "dev:lint"
# test = "dev:test"
# init-cards = "run:init-cards"

[tool.isort]
line_length = 320

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "types-flask",
    "types-Markdown",
    "types-pytz",
    "types-redis",
    "types-requests",
    "types-six",
    "types-werkzeug",
    "types-certifi",
    "types-chardet",
    "types-python-dateutil",
    "types-toml",
    "types-typed-ast",
    "pipfile",
    "types-freezegun",
    "brotli",
    "ruff",
    "mypy-extensions",
]

[tool.ruff]
line-length = 320
exclude = [
    ".git",
    "__pycache__",
    "src",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]
ignore = [
    "E302",
    "E402",
    "E501",
]
select = [
    "E",
    "F",
    "I",
    "T2",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"rotation_script/*" = ["T201"]
"shared/*" = ["T201"]
"maintenance/*" = ["T201"]
"magic/*" = ["T201"]
"price_grabber/*" = ["T201"]
"dev.py" = ["T201"]
"logsite/*" = ["T201"]
"conftest.py" = ["T201"]
"build.py" = ["T201"]
"*_test.py" = ["T201"]
"magic/multiverse.py" = ["T201"]
"magic/seasons.py" = ["E501"]
"modo_bugs/*" = ["T201"]
"run.py" = ["T201"]
"analysis/*" = ["T201"]
